# geoflow-rs

./: Cargo.toml  build.pgsql  build.sql  rustfmt.toml
src/: lib.rs  main.rs
src/bulk_loading/: analyze.rs  avro.rs  delimited.rs  error.rs  excel.rs  geo_json.rs  ipc.rs  load.rs  loader.rs  mod.rs  options.rs  parquet.rs  shape.rs  utilities.rs
src/bulk_loading/arcgis/: metadata.rs  mod.rs  scraping.rs
src/database/: data_sources.rs  mod.rs  source_data.rs  users.rs  utilities.rs
src/server/: bulk_loading.rs  data_sources.rs  mod.rs  tasks.rs  users.rs
src/tasks/: bulk_load.rs  mod.rs
tests/: avro data test.avro  delimited data test.csv  excel data test.xlsx  geojson data test.geojson  ipc data test.ipc  loaders.rs  parquet data test.parquet
tests/shape-data-test/: shape_data_test.dbf  shape_data_test.sbn  shape_data_test.sbx  shape_data_test.shp  shape_data_test.shx  shape_data_test.xml
