[package]
name = "geoflow-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
workflow_engine = { path = "/home/steventhomson/Rust Projects/workflow-engine-rs" }
sqlx = { version = "0.6.0", features = ["postgres", "runtime-tokio-rustls", "json", "macros", "chrono", "ipnetwork"] }
tokio = { version = "1.20.1", features = ["full"] }
futures = "0.3.21"
once_cell = "1.13.0"
async-once-cell = "0.4.2"
serde = { version = "1.0.144" }
rocket = { version = "0.5.0-rc.2", features = ["serde_json", "json"] }
chrono = { version = "0.4.22", features = ["serde"] }
reqwest = { version = "0.11.11", features = ["json"] }
polars = { version = "0.24.0", features = ["serde", "parquet", "ipc", "dtype-full", "timezones"] }
async-std = "1.12.0"
itertools = "0.10.5"
tempfile = "3.3.0"
calamine = { version = "0.18.0", features = ["dates"] }
shapefile = { version = "0.3.0", features = ["geo-types"] }
geo-types = "0.7.7"
wkt = { version = "0.10.3", features = ["geo-types"] }
serde_json = { version = "1.0.85", features = ["preserve_order"] }
geojson = { version = "0.24.0", features = ["geo-types"] }
csv = "1.1.6"
phf = { version = "0.11.1", features = ["macros"] }
async-trait = "0.1.58"
regex = "1.7.0"
lazy_static = "1.4.0"
parquet = { version = "27.0.0", features = ["json"] }
wkb = "0.7.1"
avro-rs = "0.13.0"
serde-aux = "4.1.2"
url = { version = "2.3.1", features = ["serde"] }
uuid = "0.8.2"
